Criado através do Colaboratory

--- a/IRPF.ipynb
+++ b/IRPF.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "IRPF.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO/VQUkq+05WWc24g5rv6B5",
+      "authorship_tag": "ABX9TyOC7Wt73orOHI9U1CiCxUcO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1227,9 +1227,9 @@
     {
       "cell_type": "code",
       "source": [
-        "def report_vendas_acoes():\n",
+        "def report_vendas_acoes(ano):\n",
         "    mes=[\"janeiro\", \"fevereiro\", \"março\", \"abril\", \"maio\", \"junho\", \"julho\", \"agosto\", \"setembro\", \"outubro\", \"novembro\" ,\"dezembro\"]\n",
-        "    df_vendas=df2021A.loc[(df2021A['C/V'] == -1.0)]\n",
+        "    df_vendas=df2021A.loc[(df2021A['C/V'] == -1.0)&(df2021A['Ano'] == ano)]\n",
         "    print(\"############VENDAS##############\")\n",
         "    for index,i in enumerate(mes):\n",
         "        print(\"\")\n",
@@ -1246,7 +1246,7 @@
         "        \n",
         "        #print(df_vendas['Data operação'])\n",
         "\n",
-        "report_vendas_acoes()\n",
+        "report_vendas_acoes(2021)\n",
         "# df_vendas=df2021A.loc[(df2021A['Operação C/V'] == -1.0)]\n",
         "# df_vendas"
       ],
@@ -1255,9 +1255,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YVmt5gLypePo",
-        "outputId": "8c55b6bf-2a69-4f5a-a38b-6571cbc223f4"
+        "outputId": "98111daa-36ce-4181-9794-1731881afde0"
       },
-      "execution_count": 93,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
@@ -1266,7 +1266,6 @@
             "############VENDAS##############\n",
             "\n",
             "-------------janeiro---------------\n",
-            "-Venda de ITSA4 a R$12.83 qtd: 100 Lucro=(1283.00 - 100*11.53)= 130.00\n",
             "\n",
             "-------------fevereiro---------------\n",
             "\n",
@@ -1284,15 +1283,13 @@
             "-Venda de VISC11 a R$103.5 qtd: 10 Lucro=(1035.00 - 10*112.54)= -90.42\n",
             "\n",
             "-------------setembro---------------\n",
-            "-Venda de ITSA4 a R$9.78 qtd: 100 Lucro=(978.00 - 100*9.95)= -17.00\n",
             "\n",
             "-------------outubro---------------\n",
             "\n",
             "-------------novembro---------------\n",
             "\n",
             "-------------dezembro---------------\n",
-            "-Venda de PETR4 a R$29.35 qtd: 100 Lucro=(2935.00 - 100*22.05)= 730.00\n",
-            "-Venda de ITSA4 a R$11.93 qtd: 100 Lucro=(1193.00 - 100*10.85)= 108.50\n"
+            "-Venda de PETR4 a R$29.35 qtd: 100 Lucro=(2935.00 - 100*22.05)= 730.00\n"
           ]
         }
       ]
